--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,45 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 3 3 3;
+    --card: 19 19 19;
+    --border: 103 103 103;
+    --divider: 40 40 40;
+    --tag: 42 42 42;
+
+    --green-yellow: 158 250 19;
+
+    --text-100: 255 255 255; /* #FFFFFF */
+    --text-200: 241 241 241; /* #F1F1F1 */
+    --text-300: 237 237 237; /* #EDEDED */
+    --text-400: 178 178 178; /* #B2B2B2 */
+    --text-500: 103 103 103; /* #676767 */
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.swiper-button-next, .swiper-button-prev {
+  @apply !w-12 !h-12 z-20 flex items-center justify-center rounded-full border border-text-500;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.swiper-button-next:hover, .swiper-button-prev:hover {
+  @apply !border-transparent bg-[#303030] transition-all duration-200;
+}
+
+.swiper-button-prev.swiper-button-disabled,
+.swiper-button-next.swiper-button-disabled {
+  @apply !opacity-0;
+}
+
+.swiper-button-prev:after, .swiper-button-next:after {
+  @apply !text-base text-text-100 font-bold;
+}
+
+.swiper-button-prev, .swiper-rtl .swiper-button-next {
+  @apply !left-0;
+}
+
+.swiper-button-next, .swiper-rtl .swiper-button-prev {
+  @apply !right-0;
 }
